Fix overflow bug in the editor

--- a/index/less/main.less
+++ b/index/less/main.less
@@ -1000,7 +1000,6 @@ form.add-part-form {
     border: 1px dotted @kntntGreen;
   }
   .tools {
-    overflow: hidden;
     padding-bottom: 5px;
   }
   textarea {
